# micstasy

./: CMakeLists.txt  README.md  micstasyc.c  micstasyc.h
cmake/Modules/: FindPortMidi.cmake
matlab/: compile_linux.m  compile_windows.m  micstasy.c  micstasy.m  portmidi.lib
